Fix spacing issues on Bajaj Finserv EMI card screen

--- a/app/css/savedcards.styl
+++ b/app/css/savedcards.styl
@@ -310,3 +310,13 @@ $cardpl = 70px;
         top: 0;
         right: 0;
 
+// Bajaj Finserv EMI
+#add-emi-container
+  .elem-card
+    .cardtype
+      position: absolute;
+      right: 0;
+      top: 26px;
+
+  .emi-plans-info-container
+    padding: 12px 0;
